# gpt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/gpt/: base.py  util.py
src/gpt/domain_identification/: fields.py  keywords.py  prompts.py  questions_expert.py  questions_generic.py
src/gpt/prometheus/: test.py  train.py  translator.py
src/gpt/tests/unittests/: test_util.py
